Updated the language server to start using the front end of the compiler rather than just parsing text. Still needs loads more work - but it's starting to come together. Found some issues in the introspection source supplier, some types not resolved. So I need to look at that next.